appId: ${MAESTRO_APP_ID}
---
- assertVisible: "アクティビティ|Activities"
- tapOn:
    id: daily.addActivity
- assertVisible:
    id: tasks.create.dialog
- tapOn:
    id: tasks.create.cancel
