appId: ${MAESTRO_APP_ID}
---
- tapOn:
    id: goals.editButton
- assertVisible:
    id: goals.editForm
- tapOn:
    id: goals.editForm.targetInput
- eraseText: 8
- inputText: ${GOAL_TARGET_UPDATED}
- tapOn:
    id: goals.editForm
- tapOn:
    id: goals.editForm.save
- extendedWaitUntil:
    visible:
      id: goals.tab.active
    timeout: 10000
